# quasar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md
cli/: Cargo.toml  Readme.md
cli/src/: build.rs  cfg.rs  config.rs  deploy.rs  error.rs  idl.rs  init.rs  lib.rs  lint.rs  main.rs  new.rs  test.rs  utils.rs
cli/src/init/: mod.rs  scaffold.rs  templates.rs
core/: Cargo.toml
core/src/: client.rs  context.rs  dynamic.rs  entrypoint.rs  error.rs  event.rs  log.rs  macros.rs  pda.rs  prelude.rs  remaining.rs  return_data.rs  traits.rs  utils.rs
core/src/accounts/: account.rs  initialize.rs  mod.rs
core/src/checks/: address.rs  executable.rs  mod.rs  mutable.rs  owner.rs  signer.rs
core/src/cpi/: buf.rs  mod.rs  system.rs
core/src/sysvars/: mod.rs  rent.rs
core/tests/: miri.rs
core/tests/compile_fail/: dynamic_vec_alignment.rs  dynamic_vec_alignment.stderr  instruction_vec_alignment.rs  instruction_vec_alignment.stderr
docs/: accounts.md
examples/anchor-vault/: Cargo.toml
examples/escrow/: Cargo.toml
examples/escrow/client/: Cargo.toml
examples/escrow/client/src/: lib.rs  pda.rs
examples/escrow/client/src/events/: make_event.rs  mod.rs  refund_event.rs  take_event.rs
examples/escrow/client/src/instructions/: make.rs  mod.rs  refund.rs  take.rs
examples/escrow/src/: client.rs  events.rs  lib.rs  state.rs  tests.rs
examples/escrow/src/instructions/: make.rs  refund.rs  take.rs
examples/multisig/: Cargo.toml
examples/multisig/client/: Cargo.toml
examples/multisig/client/src/: lib.rs  pda.rs
examples/multisig/src/: client.rs  lib.rs  state.rs  tests.rs
examples/multisig/src/instructions/: create.rs  deposit.rs  execute_transfer.rs  mod.rs  set_label.rs
examples/pinocchio-vault/: Cargo.toml
examples/upstream-vault/: Cargo.toml
examples/upstream-vault/.cargo/: config.toml
examples/upstream-vault/client/: Cargo.toml
examples/upstream-vault/client/src/: lib.rs
examples/upstream-vault/src/: lib.rs  tests.rs
examples/upstream-vault/src/instructions/: deposit.rs  mod.rs  withdraw.rs
examples/vault/: Cargo.toml
examples/vault/client/: Cargo.toml
examples/vault/client/src/: lib.rs  pda.rs
examples/vault/src/: client.rs  idl_client.rs  lib.rs  tests.rs
examples/vault/src/instructions/: deposit.rs  mod.rs  withdraw.rs
idl/: Cargo.toml
idl/src/: codegen_ts.rs  lib.rs  types.rs
idl/src/codegen/: rust.rs  typescript.rs
idl/src/lint/: constraints.rs  graph.rs  mod.rs  output.rs
idl/src/parser/: accounts.rs  errors.rs  events.rs  helpers.rs  mod.rs  module_resolver.rs  program.rs  state.rs
idl/tests/: lint.rs  parser.rs
lang/: Cargo.toml
lang/src/: borsh.rs  client.rs  context.rs  dynamic.rs  entrypoint.rs  error.rs  event.rs  lib.rs  log.rs  macros.rs  pda.rs  pod.rs  prelude.rs  remaining.rs  return_data.rs  traits.rs
lang/src/accounts/: account.rs  interface.rs  program.rs  signer.rs  system_account.rs  sysvar.rs  unchecked.rs
lang/src/checks/: address.rs  executable.rs  mod.rs  mutable.rs  owner.rs  signer.rs
lang/src/cpi/: buf.rs  mod.rs  system.rs
lang/src/sysvars/: clock.rs  mod.rs  rent.rs
lang/tests/: miri.rs  parse_accounts.rs
lang/tests/compile_fail/: accounts_type_generic.rs  accounts_type_generic.stderr  close_mint.rs  close_mint.stderr  dynamic_vec_alignment.rs  dynamic_vec_alignment.stderr  error_code_on_struct.rs  error_code_on_struct.stderr  event_tuple_struct.rs  event_tuple_struct.stderr  event_unsupported_string.rs  event_unsupported_string.stderr  event_unsupported_type.rs  event_unsupported_type.stderr  fixed_after_dynamic.rs  fixed_after_dynamic.stderr  instruction_vec_alignment.rs  instruction_vec_alignment.stderr  metadata_bad_rent.rs  multi_token_program_missing_mint_selector.rs  multi_token_program_missing_mint_selector.stderr  multi_token_program_missing_token_selector.rs  multi_token_program_missing_token_selector.stderr  multiple_tails.rs  multiple_tails.stderr  realloc_bad_optional.rs  realloc_bad_optional.stderr  realloc_bad_signer.rs  realloc_bad_signer.stderr  realloc_bad_unchecked.rs  realloc_bad_unchecked.stderr  seeds_raw_on_account.rs  seeds_raw_on_account.stderr  seeds_wrong_arity.rs  seeds_wrong_arity.stderr  tail_not_last.rs  tail_not_last.stderr  zero_discriminator_account.rs  zero_discriminator_account.stderr  zero_discriminator_single.rs  (+1 more)
pod/: Cargo.toml
pod/src/: lib.rs
profile/: .gitignore  Cargo.toml  Readme.md  index.html
profile/src/: aggregate.rs  lib.rs  output.rs
spl/: Cargo.toml
spl/src/: associated_token.rs  constants.rs  cpi.rs  init.rs  lib.rs  validate.rs
spl/src/associated_token/: address.rs  init.rs  instructions.rs  mod.rs  validate.rs
spl/src/helpers/: close.rs  constants.rs  init.rs  mod.rs
spl/src/instructions/: approve.rs  burn.rs  close_account.rs  initialize_account.rs  initialize_mint.rs  mint_to.rs  mod.rs  revoke.rs  sync_native.rs  transfer.rs  transfer_checked.rs
spl/src/interface/: mod.rs
spl/src/metadata/: init.rs  mod.rs  program.rs  state.rs
spl/src/metadata/instructions/: approve_collection.rs  burn.rs  create_master_edition.rs  create_metadata.rs  freeze_thaw.rs  mint_edition.rs  mod.rs  remove_creator.rs  revoke_collection.rs  set_and_verify_collection.rs  set_collection_size.rs  set_token_standard.rs  sign_metadata.rs  unverify_collection.rs  update_metadata.rs  update_primary_sale.rs  utilize.rs  verify_collection.rs
spl/src/token/: mod.rs
spl/src/token_2022/: mod.rs
spl/tests/: miri.rs
tests/programs/test-events/: Cargo.toml
tests/programs/test-events/src/: events.rs  lib.rs
tests/programs/test-token-cpi/: Cargo.toml
tests/programs/test-token-cpi/src/: lib.rs
tests/suite/: Cargo.toml
tests/suite/src/: account_validation.rs  constraints.rs  dynamic.rs  errors.rs  header_tests.rs  helpers.rs  misc.rs  remaining.rs  test_cpi_approve_revoke.rs  test_cpi_close.rs  test_cpi_mint_burn.rs  test_cpi_transfer.rs  test_init_ata.rs  test_init_mint.rs  test_init_token.rs  test_validate_ata.rs  test_validate_mint.rs  test_validate_token.rs
(+244 files in other folders)
