[package]
name = "quasar"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
quasar-derive = { path = "derive" }
wincode = { version = "0.4.4", features = ["derive"] }
solana-program-error = "3.0.0"
solana-account-view = "1.0.0"
solana-rent = { version = "4.0.0", features = ["sysvar"] }
solana-address = { version = "2.2.0", features = ["wincode", "decode", "copy"] }
solana-instruction-view = { version = "1.0.0", features = ["cpi"] }

[target.'cfg(any(target_os = "solana", target_arch = "bpf"))'.dependencies]
solana-define-syscall = { version = "4.0.1", features = ["unstable-static-syscalls"] }