[workspace]
resolver = "3"
members = ["lang", "derive", "pod", "spl", "idl", "profile", "examples/*", "tests/programs/*", "tests/suite", "cli"]
exclude = ["examples/anchor-vault"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/blueshift-gg/quasar"
authors = ["Leonardo Donatacci <leo@blueshift.gg>", "Dean Little <dean@blueshift.gg>"]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
