[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "quasar"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
quasar-profile = { path = "../profile" }
thiserror = "2.0.18"
toml = "0.8"
anyhow = "1.0"