[package]
name = "quasar-core"
description = "Zero-copy Solana program framework — core primitives, account types, CPI builder, and events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
quasar-derive = { path = "../derive" }
quasar-pod = { path = "../pod" }
const-crypto = "0.3.0"
solana-program-error = "3.0.0"
solana-account-view = "1.0.0"
solana-address = { version = "2.2.0", features = ["wincode", "decode", "copy"] }
solana-instruction-view = { version = "1.0.0", features = ["cpi"] }

[target.'cfg(any(target_os = "solana", target_arch = "bpf"))'.dependencies]
solana-define-syscall = { version = "5.0.0", features = ["unstable-static-syscalls"] }

[target.'cfg(not(any(target_os = "solana", target_arch = "bpf")))'.dependencies]
solana-instruction = "3.2.0"
