[package]
name = "quasar-idl"
description = "IDL generator for the Quasar Solana framework with discriminator collision detection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "quasar-idl"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "parsing"] }
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
