[package]
name = "quasar-pod"
description = "Alignment-1 Pod integer types for zero-copy Solana account access"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
wincode = ["dep:wincode"]

[dependencies]
wincode = { version = "0.5", features = ["derive"], optional = true }
