[package]
name = "quasar-profile"
version = "0.1.0"
edition = "2021"


[dependencies]
goblin = "0.9"
addr2line = "0.24"
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
memmap2 = "0.9"
rustc-demangle = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
