[package]
name = "quasar-spl"
description = "SPL Token program CPI and zero-copy account types for the Quasar Solana framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
quasar-core = { path = "../core" }
solana-address = { version = "2.2.0", features = ["copy"] }
