[package]
name = "quasar-spl"
description = "SPL Token program CPI and zero-copy account types for the Quasar Solana framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
metadata = []

[dependencies]
quasar-lang = { path = "../lang" }
solana-address = { version = "2.2.0", features = ["copy"] }

[dev-dependencies]
solana-program-error = "3.0.0"
