[package]
name = "quasar-escrow"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
quasar-core = { path = "../../core" }
quasar-spl = { path = "../../spl" }
wincode = { version = "0.4.4", features = ["derive"] }
solana-address = { version = "2.2.0" }
solana-instruction = { version = "3.1.0" }

[dev-dependencies]
mollusk-svm = "0.10.3"
mollusk-svm-programs-token = "0.10.3"
spl-token-interface = { version = "2.0.0" }
solana-program-pack = { version = "3.0.0" }
solana-address = { version = "2.2.0", features = ["decode"]}
solana-account = { version = "3.4.0" }
solana-instruction = { version = "3.1.0", features = ["bincode"] }