[package]
name = "quasar-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = { path = "../../lang" }
quasar-spl = { path = "../../spl" }
solana-address = { version = "2.2.0" }
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
mollusk-svm = "0.10.3"
mollusk-svm-programs-token = "0.10.3"
spl-token-interface = { version = "2.0.0" }
solana-program-pack = { version = "3.1.0" }
solana-address = { version = "2.2.0", features = ["decode"] }
solana-account = { version = "3.4.0" }
solana-instruction = { version = "3.2.0", features = ["bincode"] }
