[package]
name = "quasar-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = { path = "../../lang" }
quasar-spl = { path = "../../spl" }
solana-address = { version = "2.6" }
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
quasar-escrow-client = { path = "client" }
wincode = { version = "0.5", features = ["derive"] }
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
spl-token-interface = { version = "2.0.0" }
solana-program-pack = { version = "3.1.0" }
