[package]
name = "upstream-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = { path = "../../lang" }
solana-address = { version = "2.6" }

[dev-dependencies]
upstream-vault-client = { path = "client" }
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
