[package]
name = "quasar-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = { path = "../../lang" }

[dev-dependencies]
mollusk-svm = "0.10.3"
solana-account = { version = "3.4.0" }
solana-instruction = { version = "3.2.0", features = ["bincode"] }
