[package]
name = "quasar-test-suite"
version = "0.1.0"
edition = "2021"
publish = false

[features]
debug = ["quasar-test-errors/debug"]

[lints]
workspace = true

[dev-dependencies]
quasar-lang = { path = "../../lang" }
quasar-test-misc = { path = "../programs/test-misc", features = ["client"] }
quasar-test-pda = { path = "../programs/test-pda" }
quasar-test-sysvar = { path = "../programs/test-sysvar" }
quasar-test-events = { path = "../programs/test-events" }
quasar-test-errors = { path = "../programs/test-errors" }
quasar-test-token-cpi = { path = "../programs/test-token-cpi" }
quasar-test-token-validate = { path = "../programs/test-token-validate" }
quasar-test-heap = { path = "../programs/test-heap", features = ["client"] }
quasar-test-token-init = { path = "../programs/test-token-init" }
quasar-spl = { path = "../../spl", features = ["metadata"] }
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
mollusk-svm = "0.10.3"
mollusk-svm-programs-token = { version = "0.10.3", features = ["associated-token", "token-2022"] }
spl-token-interface = "2.0.0"
solana-program-pack = "3.1.0"
solana-account = "3.4"
solana-address = { version = "2.6", features = ["decode"] }
solana-instruction = { version = "3.2", features = ["bincode"] }
