[package]
name = "quasar-test-token-cpi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
default = ["alloc"]
alloc = ["quasar-lang/alloc"]
debug = []

[dependencies]
quasar-lang = { path = "../../../lang" }
quasar-spl = { path = "../../../spl", features = ["metadata"] }

[dev-dependencies]
